--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.9",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
