--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-hook-form": "^7.44.3",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.11.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
